[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "configer"
version = "1.4.1"
description = "Easy configuration of arguments in a python code!"
readme = "README.md"
requires-python = ">=2.7"
license = { text = "GNU Affero General Public License, version 3" }

authors = [
  { name = "Nima Ghorbani", email = "nima.gbani@gmail.com" }
]

maintainers = [
  { name = "Nima Ghorbani", email = "nima.gbani@gmail.com" }
]

urls = { Homepage = "https://github.com/nghorbani/configer" }

dependencies = [
  "configparser"
]

classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Natural Language :: English",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: POSIX",
  "Operating System :: POSIX :: BSD",
  "Operating System :: POSIX :: Linux",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python",
  "Programming Language :: Python :: 2",
  "Programming Language :: Python :: 2.7",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
]

[tool.setuptools]
packages = ["configer"]

[tool.setuptools.package-data]
tests = ["sample_settings.ini"]
